# reversi

./: .gitignore  README.md  cplayer.c  cplayer.cp313-win_amd64.pyd  cplayer.pyx  game_settings.py  main.py  menu.py  player.py  pyproject.toml  reversi.py  reversi_manager.py  scene.py  scene_manager.py  setup.py  stone.py  turn.py
