[project]
name = "reversi"
version = "0.1.0"
description = ""
authors = [
    {name = "Sh00T",email = "undefindshinjin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyxel (>=2.5.11,<3.0.0)",
    "cython (>=3.2.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "setuptools (>=80.9.0,<81.0.0)",
    "cython (>=3.2.3,<4.0.0)"
]
